--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -9,7 +9,7 @@ li {
 }
 
 .navBar {
-  background: rgb(0, 0, 0);
+  background: #005B99;
   box-shadow: 4px 2px 5px gray;
   color: white;
   margin-bottom: 2rem;
